--- a/app/src/main/res/layout/item_row_game.xml
+++ b/app/src/main/res/layout/item_row_game.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="300dp"
+    android:layout_height="400dp"
+    xmlns:tools="http://schemas.android.com/tools"
     app:cardCornerRadius="@dimen/dimens18"
     android:elevation="@dimen/dimens8"
-    android:layout_marginBottom="@dimen/dimens18">
+    android:layout_marginStart="@dimen/dimens12"
+    android:layout_marginEnd="@dimen/dimens12"
+    android:layout_marginTop="@dimen/dimens12"
+    android:layout_marginBottom="@dimen/dimens12"
+    android:clickable="true"
+    android:foreground="?android:attr/selectableItemBackground"
+    android:focusable="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -16,12 +22,69 @@
             android:id="@+id/imgGame"
             android:layout_width="match_parent"
             android:scaleType="centerCrop"
+            android:background="@drawable/card_foreground"
             android:contentDescription="@string/imggame"
             android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            android:id="@+id/viewBlur"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="#99000000"
+            android:layout_marginTop="300dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/imgGame" />
+
+        <TextView
+            android:id="@+id/txtName"
+            android:layout_width="0dp"
+            android:ellipsize="end"
+            android:layout_height="wrap_content"
+            tools:text="@string/place_holder_text"
+            android:textColor="@color/white"
+            android:textSize="24sp"
+            android:maxLines="1"
+            android:textStyle="bold"
+            android:layout_marginTop="@dimen/dimens12"
+            android:layout_marginStart="@dimen/dimens18"
+            android:layout_marginEnd="@dimen/dimens18"
+            app:layout_constraintEnd_toEndOf="@id/viewBlur"
+            app:layout_constraintTop_toTopOf="@id/viewBlur"
+            app:layout_constraintStart_toStartOf="@id/viewBlur"/>
+
+        <RatingBar
+            android:id="@+id/rattingBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:progressTint="@color/colorGreen"
+            style="?android:attr/ratingBarStyleIndicator"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="@dimen/dimens8"
+            android:numStars="5"
+            android:isIndicator="true"
+            app:layout_constraintStart_toStartOf="@id/txtName"
+            app:layout_constraintTop_toBottomOf="@id/txtName"
+            />
+
+        <TextView
+            android:id="@+id/txtRatting"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="99"
+            android:textColor="@color/white"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:layout_marginStart="@dimen/dimens8"
+            app:layout_constraintStart_toEndOf="@id/rattingBar"
+            app:layout_constraintTop_toTopOf="@+id/rattingBar"
+            app:layout_constraintBottom_toBottomOf="@id/rattingBar"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
