done styling item row game

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="dimens8">8dp</dimen>
     <dimen name="dimens16">16dp</dimen>
     <dimen name="dimens12">12dp</dimen>
+    <dimen name="dimens4">4dp</dimen>
 </resources>
