--- a/app/src/main/res/layout/item_row_game.xml
+++ b/app/src/main/res/layout/item_row_game.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="400dp"
-    xmlns:tools="http://schemas.android.com/tools"
-    app:cardCornerRadius="@dimen/dimens18"
-    android:elevation="@dimen/dimens8"
     android:layout_marginStart="@dimen/dimens12"
-    android:layout_marginEnd="@dimen/dimens12"
     android:layout_marginTop="@dimen/dimens12"
+    android:layout_marginEnd="@dimen/dimens12"
     android:layout_marginBottom="@dimen/dimens12"
     android:clickable="true"
+    android:elevation="@dimen/dimens8"
+    android:focusable="true"
     android:foreground="?android:attr/selectableItemBackground"
-    android:focusable="true">
+    app:cardCornerRadius="@dimen/dimens18">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -21,10 +21,10 @@
         <ImageView
             android:id="@+id/imgGame"
             android:layout_width="match_parent"
-            android:scaleType="centerCrop"
-            android:background="@drawable/bg_card"
-            android:contentDescription="@string/imggame"
             android:layout_height="match_parent"
+            android:background="@drawable/background_card"
+            android:contentDescription="@string/imggame"
+            android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -34,8 +34,7 @@
             android:id="@+id/viewBlur"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="#99000000"
-            android:layout_marginTop="300dp"
+            android:background="#45000000"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -44,48 +43,63 @@
         <TextView
             android:id="@+id/txtName"
             android:layout_width="0dp"
-            android:ellipsize="end"
             android:layout_height="wrap_content"
-            tools:text="@string/place_holder_text"
+            android:layout_marginBottom="@dimen/dimens8"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:textColor="@color/white"
             android:textSize="24sp"
-            android:maxLines="1"
             android:textStyle="bold"
-            android:layout_marginTop="@dimen/dimens12"
+            app:layout_constraintBottom_toTopOf="@+id/txtGenre"
+            app:layout_constraintEnd_toEndOf="@+id/txtGenre"
+            app:layout_constraintStart_toStartOf="@+id/txtGenre"
+            tools:text="@string/place_holder_text" />
+
+        <TextView
+            android:id="@+id/txtGenre"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dimens18"
             android:layout_marginEnd="@dimen/dimens18"
-            app:layout_constraintEnd_toEndOf="@id/viewBlur"
-            app:layout_constraintTop_toTopOf="@id/viewBlur"
-            app:layout_constraintStart_toStartOf="@id/viewBlur"/>
+            android:layout_marginBottom="@dimen/dimens18"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:text="@string/place_holder_text" />
 
-        <RatingBar
+        <ImageView
             android:id="@+id/rattingBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:progressTint="@color/colorGreen"
-            style="?android:attr/ratingBarStyleIndicator"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="@dimen/dimens8"
-            android:numStars="5"
-            android:isIndicator="true"
-            app:layout_constraintStart_toStartOf="@id/txtName"
-            app:layout_constraintTop_toBottomOf="@id/txtName"
-            />
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:src="@drawable/ic_star_green"
+            android:layout_marginEnd="@dimen/dimens4"
+            app:layout_constraintBottom_toBottomOf="@id/txtRatting"
+            app:layout_constraintTop_toTopOf="@id/txtRatting"
+            app:layout_constraintEnd_toStartOf="@id/txtRatting" />
+
 
         <TextView
             android:id="@+id/txtRatting"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="99"
+            android:layout_marginStart="@dimen/dimens8"
             android:textColor="@color/white"
             android:textSize="24sp"
             android:textStyle="bold"
-            android:layout_marginStart="@dimen/dimens8"
-            app:layout_constraintStart_toEndOf="@id/rattingBar"
-            app:layout_constraintTop_toTopOf="@+id/rattingBar"
-            app:layout_constraintBottom_toBottomOf="@id/rattingBar"
-            />
+            android:layout_marginTop="@dimen/dimens18"
+            android:layout_marginEnd="@dimen/dimens18"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="99" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
+
+
