--- a/app/src/main/res/layout/activity_game_detail.xml
+++ b/app/src/main/res/layout/activity_game_detail.xml
@@ -106,7 +106,9 @@
         android:layout_gravity="end|bottom"
         android:layout_marginEnd="@dimen/dimens18"
         android:layout_marginBottom="@dimen/dimens18"
-        android:src="@drawable/ic_blue_search" />
+        android:src="@drawable/ic_baseline_favorite_border_24"
+        android:tint="@color/black"
+        app:tint="@color/white" />
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
