--- a/app/src/main/res/layout/activity_game_detail.xml
+++ b/app/src/main/res/layout/activity_game_detail.xml
@@ -105,10 +105,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
         android:layout_marginEnd="@dimen/dimens18"
-        android:layout_marginBottom="@dimen/dimens18"
         android:src="@drawable/ic_baseline_favorite_border_24"
-        android:tint="@color/black"
-        app:tint="@color/white" />
+        android:layout_marginBottom="@dimen/dimens18"
+        app:tint="@color/white"
+        android:contentDescription="@string/favoritetoggle" />
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
