--- a/app/src/main/res/layout/item_row_game.xml
+++ b/app/src/main/res/layout/item_row_game.xml
@@ -37,8 +37,10 @@
             android:background="#45000000"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/imgGame" />
+            app:layout_constraintTop_toTopOf="@+id/imgGame"
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/txtName"
